--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
